--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-root{
-  --cor-fundo:#2C1738;
-  --cor-destaque:#9750C0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+:root{
+  --cor-fundo:#007700;
+  --cor-destaque:#33ff33;
   --cor-texto: #fefefe;
 }
-
 *{
-  margin:0;
-  paddin:0;
+  margin: 0;
+  padding: 0;
 }
 
 body{
-  background-color: var(--cor-fundo);
+  font-family: 'Montserrat', 'sans-serif';
+  height: 100vh;
+  box-sizing: border-box;
+background-color: var(--cor-fundo);
   color:var(--cor-texto);
 }
-
-strong{
-  color: var(--cor-destaque);
-}
-
 .apresentacao{
   display: flex;
   margin: 10%;
@@ -25,10 +25,38 @@ strong{
   justify-content: space-between;
 }
 
-a{
-  
+.titulo__destaque{
+  color:var(--cor-destaque);
 }
-
+.apresentacao__links{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32px;
+}
+.apresentacao__links__link{
+  width: 378px;
+  border: 2px solid var(--cor-destaque);
+  color:var(--cor-texto);
+  font-size: 24px;
+  text-decoration:none;
+  padding: 21.5px;
+  border-radius: 8px;
+  text-align: center;
+  font-weight: 600;
+  font-family: "Montserrat";
+}
 .foto{
-  height: 400px;
+  height: 490px;
+}
+.apresentacao__conteudo{
+  width: 615px;
+}
+.apresentacao__conteudo__titulo{
+  font-size: 36px;
+  font-family: 'Krona One', 'sans-serif';
+}
+.apresentacao__conteudo__texto{
+  font-size: 24px;
 }
